<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora" />

    <EditText
        android:id="@+id/etNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insira_o_primeiro_numero"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insira_o_segundo_numero"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/somar" />

    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtrair" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dividir" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplicar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_resp" />


</LinearLayout>